<resources>
    <string name="app_name">芯检康</string>
    <string name="menu_test">项目检测</string>
    <string name="menu_target">检测对象</string>
    <string name="menu_author">设备授权</string>
    <string name="menu_settings">设置</string>
    <string name="remain_count">剩余%d次</string>
    <!--selectActivity and dialog-->
    <string name="select_title">请您选择属于的用户类型：</string>
    <string name="select_home">家庭用户</string>
    <string name="select_unit">单位用户</string>
    <string name="select_next">下一步</string>
    <string name="select_dialog_title">重要提示</string>
    <string name="select_dialog_message">请再次确认您选择的用户类型，确定之后将无法改变。</string>
    <string name="select_dialog_positivebutton">重新选择</string>
    <string name="select_dialog_negativebutton">确认已选</string>
    <!--MainActivity tabhost text-->
    <string name="check_title">微型荧光免疫层析分析仪</string>
    <string name="record_title">记录</string>
    <string name="tab_host_check">检测</string>
    <string name="tab_host_record">记录</string>
    <!--checkedfragment_text-->
    <string name="main_select_project">请选择检测项目</string>
    <string name="select_play">开始检测</string>
    <string name="checked_fragment_dialog_title">温馨提示</string>
    <string name="checked_fragment_dialog_msg">请选择检测项目。</string>
    <string name="checked_fragment_dialog_positivebutton">知道了</string>
    <!--window_select_project-->
    <string name="window_select_project_title">检测项目</string>
    <string name="window_select_project_add">添加检测项目</string>
    <!--window_settings-->
    <string name="check_object">检测对象</string>
    <string name="author">设备授权</string>
    <string name="settings">设置</string>

    <!--CheckedProjectActivity  text-->
    <string name="checked_project_title">检测项目</string>
    <string name="checked_project_dialog_title">温馨提示</string>
    <string name="checked_project_dialog_msg">请使用本设备上的摄像头扫描试剂盒附带的条码或二维码。</string>
    <string name="checked_project_dialog_positivebutton">知道了</string>
    <!--ProjectinfoActivity_text-->
    <string name="reagent_info">试剂信息</string>
    <string name="reagent_info_project_name">检测项目：</string>
    <string name="reagent_count">单盒试剂数量：</string>
    <string name="reagent_production_number">生产批次：</string>
    <string name="reagent_trem">有效期(月)：</string>
    <string name="reagent_vender">生成厂家：</string>
    <!--ScanCodeActivity_text-->
    <string name="scan_code_title">扫描条码/二维码</string>
    <!--CheckedObjectActivity_text-->
    <string name="checked_object_title">检测对象</string>
    <!--AddCheckedObjectInfoActivity_text-->
    <string name="add_checked_object_info_title">检测对象信息</string>
    <string name="add_checked_object_name">姓名：</string>
    <string name="add_checked_object_age">年龄：</string>
    <string name="add_checked_object_sex">性别：</string>
    <string name="add_checked_object_weight">体重：</string>
    <string name="add_checked_object_history">病史：</string>
    <string name="save">保存</string>
    <!--DevicesAuthorizeActivity_text-->
    <string name="devices_authorize_title">设备授权</string>
    <string name="id_d">ID:%d</string>
    <string name="hint">请使用手机APP扫描此二维码完成授权</string>
    <string name="devices_authorize_dialog_title">设备授权</string>
    <!--<string name="devices_authorize_dialog_msg">是否同意将本设备检测的数据授权给账户为XXXXXXXXXXX的手机端App用户查看？</string>-->
    <string name="devices_authorize_dialog_positivebutton">拒绝</string>
    <string name="devices_authorize_dialog_negativebutton">同意</string>
    <!--AboutUsActivity_text-->
    <string name="about_us_title">关于我们</string>
    <string name="version_text">版本号：</string>
    <string name="version_number">1.0.0</string>
    <string name="skill_support_text">技术支持：深圳采集云数据科技有限公司</string>
    <string name="client_phone_number">客户电话：0755-21507199</string>
    <string name="client_email">客户邮箱：wh@jjc12320.cn</string>
    <string name="copyright">天津XXX版权所有</string>
    <!--ResultDetailsActivity_text-->
    <string name="result_details_title">结果详情</string>
    <string name="result_details_checked_object">检测对象:</string>
    <string name="result_details_date">日期:</string>
    <string name="result_details_reference">参考值:</string>
    <string name="result_details_checked_result">检测结果:</string>
    <string name="result_details_disease">对应病症:</string>
    <string name="result_details_clinical">临床判读:</string>
    <!--SettingsActivity_text-->
    <string name="settings_title">设置</string>
    <string name="wlan_settings">WLAN设置</string>
    <string name="gsm_settings">GSM数据</string>
    <string name="language_select">语言选择</string>
    <string name="font_size">字体大小</string>
    <string name="check_update">检查更新</string>
    <string name="about_us">关于我们</string>
    <string name="devices_id_text">设备ID:</string>
    <!--WriteUnitNameActivity_text-->
    <string name="tv_write_unit_name">请填写您的单位名称：</string>
    <string name="et_write_unit_name">请输入单位名称</string>
    <!--GSMDataActivity_text-->
    <string name="gsm_data_open">开</string>
    <string name="gsm_data_off">关</string>
    <string name="gsm_data_title">GSM数据</string>
    <!--LanguageSelectAvtivity_text-->
    <string name="language_select_title">语言选择</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="english">English</string>
    <!--FontSizeActivity_text-->
    <string name="font_size_activity_title">字体大小</string>
    <string name="font_size_large">大</string>
    <string name="font_size_medium">中</string>
    <string name="font_size_small">小</string>
    <!--WLANSettingsActivity_text-->
    <string name="wlan_settings_activity_title">WLAN设置</string>
    <string name="wifi_edit_passwd">输入密码</string>
    <!--CaptureActivity_text-->
    <string name="scanner_code">将二维码/条码放入框内，即可自动扫描</string>
    <!--window_select_test_object-->
    <string name="tv_select_test_object">病痛症状:</string>
    <string name="tv_select_test_object1">请选择监测对象:</string>
    <string name="et_select_test_object">无</string>
    <string name="tv_select_test_object_add">新增</string>
    <string name="tv_select_test_object_ok">确定</string>
    <string name="tv_select_test_object_no">取消</string>
</resources>
