<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary1"
              android:clipToPadding="true"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include layout="@layout/tool_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="?attr/fontSize_4"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/table_logo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_text"
                    android:textSize="?attr/fontSize_2"/>

                <TextView
                    android:id="@+id/tv_version_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_number"
                    android:textSize="?attr/fontSize_2"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/skill_support_text"
                android:textSize="?attr/fontSize_2"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/client_phone_number"
                android:textSize="?attr/fontSize_2"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tv_language_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/client_email"
                android:textSize="?attr/fontSize_2"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:textSize="?attr/fontSize_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/copyright"/>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>