<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary1"
              android:clipToPadding="true"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include layout="@layout/tool_bar"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tv_wlan_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/wlan_settings"
                android:textSize="?attr/fontSize_2"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tv_gsm_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/gsm_settings"
                android:textSize="?attr/fontSize_2"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tv_language_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/language_select"
                android:textSize="?attr/fontSize_2"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tv_font_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/font_size"
                android:textSize="?attr/fontSize_2"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tv_check_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/check_update"
                android:textSize="?attr/fontSize_2"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/about_us"
                android:textSize="?attr/fontSize_2"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:textSize="?attr/fontSize_1"
                android:id="@+id/tv_devices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/devices_id_text"/>

            <TextView
                android:textSize="?attr/fontSize_1"
                android:id="@+id/tv_devices_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/tv_devices"
                android:text="1111111"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>